--- a/package.json
+++ b/package.json
@@ -16,12 +16,21 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@react-oauth/google": "^0.12.2",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-parallax-tilt": "^1.7.308",
     "react-router-dom": "^7.8.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "yup": "^1.7.0"
   },
   "devDependencies": {
@@ -33,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
