--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
+    "three": "^0.125.2",
+    "vanta": "^0.5.24",
     "yup": "^1.7.0"
   },
   "devDependencies": {
