--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
@@ -27,12 +29,16 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.308",
     "react-router-dom": "^7.8.2",
     "react-slick": "^0.31.0",
+    "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.3",
+    "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.10",
     "three": "^0.125.2",
     "vanta": "^0.5.24",
